<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_point"
        android:icon="@drawable/point_tab"
        android:title="@string/menu_point" />

    <item
        android:id="@+id/navigation_mixing"
        android:icon="@drawable/mixing_tab"
        android:title="@string/menu_mixing" />

    <item
        android:id="@+id/navigation_process"
        android:icon="@drawable/process_tab"
        android:title="@string/menu_process" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_tab"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/question_mark"
        android:title="@string/menu_info"
        />
</menu>
